# authvital

./: .env.example  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  authvital.sln  docker-compose.yml  lefthook.yml  mkdocs.yml  nginx.conf  package-lock.json  package.json  seed.config.example.yaml  seed.config.yaml  tsconfig.json
.github/workflows/: ci-and-publish.yml  ci.yml  docker.yml  publish-all-sdks.yml  publish-crates.yml  publish-maven.yml  publish-nuget.yml  publish-pypi.yml  sdk-publish.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/docs/: DEPLOYMENT.md  SYSTEM_WEBHOOKS_TEST_PLAN.md
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: docker-start.sh  migrate.sh  test-cloudsql-local.sh
backend/sdk/: README.md  package-lock.json  package.json
backend/sdk/src/: index.ts  server.ts
backend/src/: bootstrap.ts  main.ts  migrate-runner.ts
backend/src/auth/: api-key.controller.ts  api-key.service.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  domain-verification.controller.ts  domain-verification.service.dns.spec.ts  email.service.spec.ts  index.ts  password-reset.service.spec.ts  redirect-tokens.ts  signup-flow.controller.ts  signup.controller.ts  signup.service.ts
backend/src/authorization/: app-access.service.ts  authorization.module.ts  index.ts  tenant-roles.controller.ts
backend/src/bootstrap/: bootstrap.service.ts
backend/src/cli/: recover-admin.ts
backend/src/config/: env.validation.spec.ts  env.validation.ts  validate-secrets.ts
backend/src/frontend/: frontend.module.ts
backend/src/health/: health.controller.spec.ts
backend/src/instance/: instance-api-key.service.spec.ts  instance-api-key.service.ts  instance.controller.ts  instance.service.ts
backend/src/integration/: index.ts  integration.controller.ts  integration.module.ts
backend/src/invitations/: index.ts  invitations.module.ts  invitations.service.ts
backend/src/licensing/: licensing.module.ts
backend/src/oauth/: index.ts  key-manager.service.ts  key.module.ts  key.service.ts  m2m-auth.guard.spec.ts  oauth.controller.ts  oauth.module.ts  oauth.service.ts  redirect-uri-validator.service.ts
backend/src/sso/: sso-auth.controller.ts  sso-auth.service.ts  tenant-sso-config.service.ts
backend/src/super-admin/: super-admin.controller.ts  super-admin.module.ts
backend/src/sync/: sync-event.service.ts
backend/src/tenants/: index.ts  members.controller.ts  members.service.ts  tenants.controller.ts  tenants.module.ts  tenants.service.ts
docs/: AUDIT_FIXES.md  README.md  VERIFICATION_REPORT.md  requirements.txt
docs/admin/: application-setup.md  super-admin.md  tenant-admin.md
docs/api/: authentication.md  licensing-api.md  oauth-endpoints.md  tenant-api.md  user-api.md
docs/concepts/: access-control.md  architecture.md  licensing.md  multi-tenancy.md  oauth-flow.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/reference/: data-models.md  error-codes.md  jwt-claims.md
docs/sdk/: client-sdk.md  complete-setup-guide.md  pubsub.md  server-sdk.md  user-sync.md  webhooks-advanced.md  webhooks-events.md  webhooks-frameworks.md  webhooks-handler.md  webhooks-verification.md  webhooks.md
docs/security/: best-practices.md  mfa.md  sso.md
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: build-local.sh  publish-packages.sh
sdks/dotnet/: README.md
sdks/go/: README.md  authvader.go  authvital.go  go.mod
sdks/java/: README.md  pom.xml
sdks/python/: README.md  pyproject.toml
sdks/python/authvader_sdk/: __init__.py
sdks/python/authvital_sdk/: __init__.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
(+417 files in other folders)
