[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authvader-sdk"
version = "0.0.1"
description = "Official Python SDK for AuthVader Identity Platform - Coming Soon"
readme = "README.md"
license = {text = "AuthVader Community License v1.0"}
authors = [
    {name = "AuthVader Contributors"}
]
keywords = ["authvader", "authentication", "identity", "oauth", "sdk"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/authvader/authvader"
Documentation = "https://github.com/authvader/authvader/tree/main/docs"
Repository = "https://github.com/authvader/authvader"
Issues = "https://github.com/authvader/authvader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["authvader_sdk*"]
