[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authvital-sdk"
version = "0.0.1"
description = "Official Python SDK for AuthVital Identity Platform - Coming Soon"
readme = "README.md"
license = {text = "AuthVital Community License v1.0"}
authors = [
    {name = "AuthVital Contributors"}
]
keywords = ["authvital", "authentication", "identity", "oauth", "sdk"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/authvital/authvital"
Documentation = "https://github.com/authvital/authvital/tree/main/docs"
Repository = "https://github.com/authvital/authvital"
Issues = "https://github.com/authvital/authvital/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["authvital_sdk*"]
