[package]
name = "authvital"
version = "0.0.1"
edition = "2021"
authors = ["AuthVital Contributors"]
description = "Official Rust SDK for AuthVital Identity Platform - Coming Soon"
documentation = "https://docs.rs/authvital"
homepage = "https://github.com/authvital/authvital"
repository = "https://github.com/authvital/authvital"
readme = "README.md"
license-file = "../../LICENSE"
keywords = ["authvital", "authentication", "identity", "oauth", "sdk"]
categories = ["authentication", "web-programming"]

[dependencies]

[dev-dependencies]
